# libraw_android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/libraw/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libraw2dngjni.cpp  librawjni.cpp  omp.h  swab.cpp  swab.h
app/src/main/cpp/LibRaw/: CMakeLists.txt
app/src/main/cpp/exiv2/: CMakeLists.txt  exv_conf.h
app/src/main/cpp/exiv2/src/: CMakeLists.txt
app/src/main/cpp/exiv2/xmpsdk/: CMakeLists.txt
app/src/main/cpp/expat/: .gitignore  CMakeLists.txt  expat_config.h
app/src/main/cpp/libjpeg/: CMakeLists.txt
app/src/main/cpp/raw2dng/: CMakeLists.txt
app/src/main/cpp/raw2dng/libdng/: CMakeLists.txt
app/src/main/cpp/raw2dng/libdng/dng-sdk/: CMakeLists.txt
app/src/main/cpp/raw2dng/libdng/dng-sdk/source/: dng_read_image.cpp
app/src/main/cpp/raw2dng/libdng/md5/: CMakeLists.txt
app/src/main/cpp/raw2dng/libdng/xmp-sdk/: CMakeLists.txt
app/src/main/cpp/raw2dng/raw2dng/: CMakeLists.txt  config.h  raw2dng.cpp
app/src/main/cpp/raw2dng/raw2dng/vendorProcessors/: FujiProcessor.h
app/src/main/cpp/zlib/: CMakeLists.txt
app/src/main/java/com/example/libraw/: LibRaw.java  MainActivity.java  Raw2dng.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/com/example/libraw/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
